# wifi-setup

./: CMakeLists.txt  README.md  qml.qrc
qml/: PasswordField.qml  main.qml
sources/: CMakeLists.txt
sources/client/: CMakeLists.txt  main.cpp  qml.qrc  wifi_client.cpp  wifi_client.h  wifi_model.cpp  wifi_model.h
sources/client/qml/: PasswordField.qml  main.qml
sources/client/settings/: wifi.json
sources/communication/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h  settings.cpp  settings.h  wifi_api.cpp  wifi_api.h
sources/server/: CMakeLists.txt  main.cpp  wifi_server.cpp  wifi_server.h
